# Capunction

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: demo_hook.c  hook.c  main.c  personal_tray.c
include/: capunciton_tray.h  combinationInput.h  hook.h  main.h  personal_tray.h  tray.h
src/: appicon.rc
src/function_keyboard/: combinationInput.c  combinationInput.h
src/main/: capunciton_tray.c  main.c  personal_tray.c
src/windows/: input_hook.c
